[gd_scene load_steps=9 format=3 uid="uid://dcf1l0eagrk6f"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_3jjom"]
[ext_resource type="Texture2D" uid="uid://b1w312ywodpnr" path="res://graphics/player/player.png" id="1_q0yl7"]
[ext_resource type="Texture2D" uid="uid://4xi7wwqrl4hk" path="res://graphics/decals/white.png" id="3_cg80c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ll3ix"]
radius = 61.0082

[sub_resource type="Gradient" id="Gradient_0u011"]
colors = PackedColorArray(0.117647, 1, 1, 0.411765, 0.67451, 1, 1, 0.0941176)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8vj70"]
gradient = SubResource("Gradient_0u011")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tfybg"]
particle_flag_disable_z = true
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 750.0
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.3
scale_max = 0.8
color = Color(0.117647, 1, 1, 0.411765)
color_ramp = SubResource("GradientTexture1D_8vj70")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_r7i88"]
polygon = PackedVector2Array(23, -62, 4, -60, -16, -58, -42, -46, -50, -36, -52, -29, -58, -20, -57, -8, -57, 8, -51, 17, -41, 37, -28, 56, -10, 60, 14, 55, 36, 44, 54, 41, 61, 45, 65, 53, 98, 54, 100, 45, 111, 36, 122, 37, 126, 37, 125, 30, 132, 33, 138, 23, 135, 8, 130, 5, 126, 8, 128, 2, 114, -1, 109, -5, 100, -6, 90, -13, 80, -10, 65, -27, 52, -31, 46, -42, 32, -59)

[node name="Player" type="CharacterBody2D" groups=["entities"]]
collision_mask = 31
script = ExtResource("1_3jjom")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(40, 0)
rotation = 1.5708
texture = ExtResource("1_q0yl7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_ll3ix")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]
visible = false

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(134, 19)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(132, 12)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(131, 28)

[node name="GrenadeStartPosition" type="Marker2D" parent="."]
visible = false
position = Vector2(134, 19)

[node name="Particles" type="GPUParticles2D" parent="."]
visible = false
position = Vector2(136, 18)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_tfybg")
texture = ExtResource("3_cg80c")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_r7i88")

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
